Bug 504634 - Changing the tearing setting requires a compositor restart to take effect
Summary: Changing the tearing setting requires a compositor restart to take effect
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 6.3.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-21 19:05 UTC by fililip
Modified: 2025-05-23 15:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fililip 2025-05-21 19:05:42 UTC
SUMMARY
The tearing setting change requires not just an app restart (which would make sense) but also a KWin restart to take effect.

STEPS TO REPRODUCE
1. Toggle tearing
2. Run vkcube --present_mode 0
3. Make it fullscreen

OBSERVED RESULT
There should be no tearing if tearing was just disabled, and vice versa.

EXPECTED RESULT
Tearing remains as it was.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.90
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.14.7-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5800X 8-Core Processor
Memory: 64 GiB of RAM (62.7 GiB usable)
Graphics Processor 1: AMD Radeon RX 6600 XT
Comment 1 TraceyC 2025-05-21 23:43:33 UTC
Thanks for the bug report. I'd like to try to reproduce this. Can you let me know where you're setting this setting exactly? Thanks.
Comment 2 fililip 2025-05-22 00:20:06 UTC
Right-click on the desktop and select Display Configuration, then scroll down until you see the option "Screen tearing", by toggling "tearing" I meant that option.
Comment 3 Bug Janitor Service 2025-05-22 13:27:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreen/-/merge_requests/384
Comment 4 Bug Janitor Service 2025-05-23 14:55:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreen/-/merge_requests/386
Comment 5 Bug Janitor Service 2025-05-23 14:55:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreen/-/merge_requests/387
Comment 6 Zamundaaa 2025-05-23 15:00:19 UTC
Git commit ca3a700f167232408666e68f648c8eb028cad7d5 by Xaver Hugl.
Committed on 22/05/2025 at 13:25.
Pushed by zamundaaa into branch 'master'.

kcm: reload kwin config when tearing option is changed

Ideally, we'd integrate it into the normal output configuration protocol, but for
backporting that's not a usable approach
Related: bug 496970

M  +10   -0    kcm/kcm.cpp
M  +1    -0    kcm/kcm.h

https://invent.kde.org/plasma/kscreen/-/commit/ca3a700f167232408666e68f648c8eb028cad7d5
Comment 7 Zamundaaa 2025-05-23 15:04:53 UTC
Git commit 755b84e51b71c33e0099cc42d3df12c05b6beb03 by Xaver Hugl, on behalf of Xaver Hugl.
Committed on 23/05/2025 at 14:55.
Pushed by zamundaaa into branch 'Plasma/6.3'.

kcm: reload kwin config when tearing option is changed

Ideally, we'd integrate it into the normal output configuration protocol, but for
backporting that's not a usable approach
Related: bug 496970


(cherry picked from commit ca3a700f167232408666e68f648c8eb028cad7d5)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +10   -0    kcm/kcm.cpp
M  +1    -0    kcm/kcm.h

https://invent.kde.org/plasma/kscreen/-/commit/755b84e51b71c33e0099cc42d3df12c05b6beb03
Comment 8 Zamundaaa 2025-05-23 15:04:54 UTC
Git commit 8c02882a546af48617a25a78f55cbcb2cd5bf67a by Xaver Hugl, on behalf of Xaver Hugl.
Committed on 23/05/2025 at 14:54.
Pushed by zamundaaa into branch 'Plasma/6.4'.

kcm: reload kwin config when tearing option is changed

Ideally, we'd integrate it into the normal output configuration protocol, but for
backporting that's not a usable approach
Related: bug 496970


(cherry picked from commit ca3a700f167232408666e68f648c8eb028cad7d5)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +10   -0    kcm/kcm.cpp
M  +1    -0    kcm/kcm.h

https://invent.kde.org/plasma/kscreen/-/commit/8c02882a546af48617a25a78f55cbcb2cd5bf67a