kcm: reload kwin config when tearing option is changed

Ideally, we'd integrate it into the normal output configuration protocol, but for
backporting that's not a usable approach

BUG: 504634
BUG: 496970