kcm/kcm.h
@@ -137,6 +137,7 @@ private:
     bool m_settingsReverted = false;
     bool m_stopUpdatesFromBackend = false;
     bool m_configNeedsSave = false;
+    bool m_needsKwinConfigReload = false;
 
     QSortFilterProxyModel *m_outputProxyModel;
 
